--- a/source/index.html
+++ b/source/index.html
@@ -143,7 +143,7 @@
                     </div>
                     <div class="hero__button-container">
                       <a class="hero__link btn" href="#">Подробнее
-                        <div class="hero__link-svg-wrapper">
+                        <div class="hero__link-svg-wrapper btn__wrapper">
                           <svg width="10" height="10">
                             <use href="__spritemap#sprite-arrow-up"></use>
                           </svg>
@@ -187,7 +187,7 @@
                     </div>
                     <div class="hero__button-container">
                       <a class="hero__link btn" href="#">Подробнее
-                        <div class="hero__link-svg-wrapper">
+                        <div class="hero__link-svg-wrapper btn__wrapper">
                           <svg width="10" height="10">
                             <use href="__spritemap#sprite-arrow-up"></use>
                           </svg>
@@ -232,7 +232,7 @@
                     </div>
                     <div class="hero__button-container">
                       <a class="hero__link btn" href="#">Подробнее
-                        <div class="hero__link-svg-wrapper">
+                        <div class="hero__link-svg-wrapper btn__wrapper">
                           <svg width="10" height="10">
                             <use href="__spritemap#sprite-arrow-up"></use>
                           </svg>
@@ -245,12 +245,69 @@
               </li>
             </ul>
             <div class="swiper-pagination hero__pagination" data-slider="hero-slider-pgn">
-              <!-- <span class="hero__bullet"></span>
-                          <span class="hero__bullet"></span>
-                          <span class="hero__bullet"></span> -->
             </div>
           </div>
+        </section>
 
+        <section class="about" data-test="about">
+          <div class="container about__container">
+            <div class="about__text-block-wrapper">
+              <div class="about__proj-wrapper">
+                <h2>О проекте «Стажировка»</h2>
+                <p>«Стажировка» — совместный проект правительств и волонтёрских бригад.</p>
+              </div>
+              <div class="about__aim-wrapper">
+                <h3>Наша цель</h3>
+                <p>Наша деятельность направлена на повышение квалификации молодых специалистов на ранних и средних
+                  стадиях
+                  карьеры,
+                  предоставляя им инструменты для решения сложных проблем, с которыми сталкиваются в мире. Цель центра —
+                  наделить этих
+                  людей способностью инициировать значимые изменения.</p>
+                <a class="about__link btn" href="#">Подробнее о проекте
+                  <div class="about__link-svg-wrapper btn__wrapper">
+                    <svg width="10" height="10">
+                      <use href="__spritemap#sprite-arrow-up"></use>
+                    </svg>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="about__scheme">
+              <ul class="about__list">
+                <li class="about__item">
+                  <div class="about__item-wrapper">
+                    <h4>Более 250 программ</h4>
+                    <p>учебных и рабочих, разной длительностью от 3 месяцев до 1 года</p>
+                  </div>
+
+                </li>
+                <li class="about__item">
+                  <div class="about__item-wrapper">
+                    <h4>Более<br class="about__br-mobile"> 3000 участников</h4>
+                    <p>уже успешно прошли программу
+                      от «Стажировка» и остались в разных
+                      странах</p>
+                  </div>
+                </li>
+                <li class="about__item">
+                  <div class="about__item-wrapper">
+                    <h4>от 4 200 $<br class="about__br-desktop">
+                      до 8 400 $</h4>
+                    <p>грант всем участникам для комфортного прохождения&nbsp;программы</p>
+                  </div>
+                </li>
+                <li class="about__item">
+                  <div class="about__item-wrapper">
+                    <h4>участники
+                      из 60 стран</h4>
+                    <p>студенты со всего мира приезжают на программу
+                      «Стажировка»</p>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
 
         </section>
       </div>
