Добавляет разметку блока programs

--- a/source/index.html
+++ b/source/index.html
@@ -308,7 +308,82 @@
               </ul>
             </div>
           </div>
+        </section>
 
+        <section class="programs" data-test="programs">
+          <div class="container programs__upper-container">
+            <h2>Программы</h2>
+            <a class="programs__link btn" href="#">Все программы
+              <div class="programs__link-svg-wrapper btn__wrapper">
+                <svg width="10" height="10">
+                  <use href="__spritemap#sprite-arrow-up"></use>
+                </svg>
+              </div>
+            </a>
+          </div>
+          <div class="programs__slider-container">
+            <ul class="programs__list">
+              <li class="programs__item">
+                <div class="programs__item-img-container"></div>
+                <div class="programs__item-text-container">
+                  <div class="programs__item-title-container">
+                    <h3></h3>
+                  </div>
+                  <div class="programs__item-description-container">
+                    <p></p>
+                    <a class="programs__link programs__link--little btn" href="#">
+                      <div class="programs__link-svg-wrapper btn__wrapper">
+                        <svg width="10" height="10">
+                          <use href="__spritemap#sprite-arrow-up"></use>
+                        </svg>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </li>
+              <li class="programs__item">
+                <div class="programs__item-img-container"></div>
+                <div class="programs__item-text-container">
+                  <div class="programs__item-title-container">
+                    <h3></h3>
+                  </div>
+                  <div class="programs__item-description-container">
+                    <p></p>
+                    <a class="programs__link programs__link--little btn" href="#">
+                      <div class="programs__link-svg-wrapper btn__wrapper">
+                        <svg width="10" height="10">
+                          <use href="__spritemap#sprite-arrow-up"></use>
+                        </svg>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </li>
+              <li class="programs__item">
+                <div class="programs__item-img-container"></div>
+                <div class="programs__item-text-container">
+                  <div class="programs__item-title-container">
+                    <h3></h3>
+                  </div>
+                  <div class="programs__item-description-container">
+                    <p></p>
+                    <a class="programs__link programs__link--little btn" href="#">
+                      <div class="programs__link-svg-wrapper btn__wrapper">
+                        <svg width="10" height="10">
+                          <use href="__spritemap#sprite-arrow-up"></use>
+                        </svg>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </li>
+            </ul>
+            <div class="container programs__bottom-container">
+              <div class="swiper-pagination">pagination</div>
+              <div class="swiper-button-prev">button back</div>
+              <div class="swiper-button-next">button prev</div>
+            </div>
+          </div>
         </section>
       </div>
     </main>
