--- a/source/index.html
+++ b/source/index.html
@@ -127,9 +127,8 @@
                     <source type="image/jpeg" media="(min-width: 768px)"
                       srcset="img/hero/lady-yellow-tablet.jpg 1x, img/hero/lady-yellow-tablet@2x.jpg 2x" width="1440"
                       height="1024">
-                    <img class="gym__img" src="img/hero/lady-yellow-mobile.jpg"
-                      srcset="img/hero/lady-yellow-mobile@2x.jpg 2x" width="768" height="568"
-                      alt="Cпортзал и спортивный инвентарь." />
+                    <img src="img/hero/lady-yellow-mobile.jpg" srcset="img/hero/lady-yellow-mobile@2x.jpg 2x"
+                      width="768" height="568" alt="" />
                   </picture>
                 </div>
                 <div class="hero__text-wrapper">
@@ -171,8 +170,8 @@
                     <source type="image/jpeg" media="(min-width: 768px)"
                       srcset="img/hero/people-tablet.jpg 1x, img/hero/people-tablet@2x.jpg 2x" width="1440"
                       height="1024">
-                    <img class="gym__img" src="img/hero/people-mobile.jpg" srcset="img/hero/people-mobile@2x.jpg 2x"
-                      width="768" height="568" alt="Cпортзал и спортивный инвентарь." />
+                    <img src="img/hero/people-mobile.jpg" srcset="img/hero/people-mobile@2x.jpg 2x" width="768"
+                      height="568" alt="" />
                   </picture>
                 </div>
                 <div class="hero__text-wrapper">
@@ -216,8 +215,8 @@
                     <source type="image/jpeg" media="(min-width: 768px)"
                       srcset="img/hero/company-tablet.jpg 1x, img/hero/company-tablet@2x.jpg 2x" width="1440"
                       height="1024">
-                    <img class="gym__img" src="img/hero/company-mobile.jpg" srcset="img/hero/company-mobile@2x.jpg 2x"
-                      width="768" height="568" alt="Cпортзал и спортивный инвентарь." />
+                    <img src="img/hero/company-mobile.jpg" srcset="img/hero/company-mobile@2x.jpg 2x" width="768"
+                      height="568" alt="" />
                   </picture>
                 </div>
                 <div class="hero__text-wrapper">
@@ -311,7 +310,7 @@
         </section>
 
         <section class="programs" data-test="programs">
-          <div class="container programs__upper-container">
+          <div class="container programs__title-container">
             <h2>Программы</h2>
             <a class="programs__link btn" href="#">Все программы
               <div class="programs__link-svg-wrapper btn__wrapper">
@@ -322,66 +321,184 @@
             </a>
           </div>
           <div class="programs__slider-container">
-            <ul class="programs__list">
-              <li class="programs__item">
-                <div class="programs__item-img-container"></div>
-                <div class="programs__item-text-container">
-                  <div class="programs__item-title-container">
-                    <h3></h3>
+            <div class="programs__slider swiper" data-slider="programs-slider">
+              <ul class="programs__list swiper-wrapper">
+                <li class="programs__item swiper-slide">
+                  <div class="programs__item-img-container">
+                    <picture>
+                      <source type="image/webp" media="(min-width: 1440px)"
+                        srcset="img/programs/women-desktop.webp 1x, img/programs/women-desktop@2x.webp 2x" width=""
+                        height="">
+                      <source type="image/webp" media="(min-width: 768px)"
+                        srcset="img/programs/women-tablet.webp 1x, img/programs/women-tablet@2x.webp 2x" width=""
+                        height="">
+                      <source type="image/webp"
+                        srcset="img/programs/women-mobile.webp 1x, img/programs/women-mobile@2x.webp 2x" width=""
+                        height="">
+                      <source type="image/jpeg" media="(min-width: 1440px)"
+                        srcset="img/programs/women-desktop.jpg 1x, img/programs/women-desktop@2x.jpg 2x" width=""
+                        height="">
+                      <source type="image/jpeg" media="(min-width: 768px)"
+                        srcset="img/programs/women-tablet.jpg 1x, img/programs/women-tablet@2x.jpg 2x" width=""
+                        height="">
+                      <img src="img/programs/women-mobile.jpg" srcset="img/programs/women-mobile@2x.jpg 2x" width=""
+                        height="" alt="" />
+                    </picture>
                   </div>
-                  <div class="programs__item-description-container">
-                    <p></p>
-                    <a class="programs__link programs__link--little btn" href="#">
-                      <div class="programs__link-svg-wrapper btn__wrapper">
-                        <svg width="10" height="10">
-                          <use href="__spritemap#sprite-arrow-up"></use>
-                        </svg>
-                      </div>
-                    </a>
+                  <div class="programs__item-text-container">
+                    <div class="programs__item-title-container">
+                      <h3>Стажировки</h3>
+                    </div>
+                    <div class="programs__item-description-container">
+                      <p>Получите незаменимый опыт работы в крупнейших мировых компаниях</p>
+                      <a class="programs__link programs__link--little btn" href="#">
+                        <div class="programs__link-svg-wrapper btn__wrapper">
+                          <svg width="10" height="10">
+                            <use href="__spritemap#sprite-arrow-up"></use>
+                          </svg>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                </li>
+                <li class="programs__item swiper-slide">
+                  <div class="programs__item-img-container">
+                    <picture>
+                      <source type="image/webp" media="(min-width: 1440px)"
+                        srcset="img/programs/women-desktop.webp 1x, img/programs/women-desktop@2x.webp 2x" width=""
+                        height="">
+                      <source type="image/webp" media="(min-width: 768px)"
+                        srcset="img/programs/women-tablet.webp 1x, img/programs/women-tablet@2x.webp 2x" width=""
+                        height="">
+                      <source type="image/webp"
+                        srcset="img/programs/women-mobile.webp 1x, img/programs/women-mobile@2x.webp 2x" width=""
+                        height="">
+                      <source type="image/jpeg" media="(min-width: 1440px)"
+                        srcset="img/programs/women-desktop.jpg 1x, img/programs/women-desktop@2x.jpg 2x" width=""
+                        height="">
+                      <source type="image/jpeg" media="(min-width: 768px)"
+                        srcset="img/programs/women-tablet.jpg 1x, img/programs/women-tablet@2x.jpg 2x" width=""
+                        height="">
+                      <img src="img/programs/women-mobile.jpg" srcset="img/programs/women-mobile@2x.jpg 2x" width=""
+                        height="" alt="" />
+                    </picture>
+                  </div>
+                  <div class="programs__item-text-container">
+                    <div class="programs__item-title-container">
+                      <h3>Волонтёрство</h3>
+                    </div>
+                    <div class="programs__item-description-container">
+                      <p>Помогайте другим и развивайте свои лидерские качества.</p>
+                      <a class="programs__link programs__link--little btn" href="#">
+                        <div class="programs__link-svg-wrapper btn__wrapper">
+                          <svg width="10" height="10">
+                            <use href="__spritemap#sprite-arrow-up"></use>
+                          </svg>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                </li>
+                <li class="programs__item swiper-slide">
+                  <div class="programs__item-img-container">
+                    <picture>
+                      <source type="image/webp" media="(min-width: 1440px)"
+                        srcset="img/programs/women-desktop.webp 1x, img/programs/women-desktop@2x.webp 2x" width=""
+                        height="">
+                      <source type="image/webp" media="(min-width: 768px)"
+                        srcset="img/programs/women-tablet.webp 1x, img/programs/women-tablet@2x.webp 2x" width=""
+                        height="">
+                      <source type="image/webp"
+                        srcset="img/programs/women-mobile.webp 1x, img/programs/women-mobile@2x.webp 2x" width=""
+                        height="">
+                      <source type="image/jpeg" media="(min-width: 1440px)"
+                        srcset="img/programs/women-desktop.jpg 1x, img/programs/women-desktop@2x.jpg 2x" width=""
+                        height="">
+                      <source type="image/jpeg" media="(min-width: 768px)"
+                        srcset="img/programs/women-tablet.jpg 1x, img/programs/women-tablet@2x.jpg 2x" width=""
+                        height="">
+                      <img src="img/programs/women-mobile.jpg" srcset="img/programs/women-mobile@2x.jpg 2x" width=""
+                        height="" alt="" />
+                    </picture>
+                  </div>
+                  <div class="programs__item-text-container">
+                    <div class="programs__item-title-container">
+                      <h3>Учёба</h3>
+                    </div>
+                    <div class="programs__item-description-container">
+                      <p>Получите образование и измените своё будущее.</p>
+                      <a class="programs__link programs__link--little btn" href="#">
+                        <div class="programs__link-svg-wrapper btn__wrapper">
+                          <svg width="10" height="10">
+                            <use href="__spritemap#sprite-arrow-up"></use>
+                          </svg>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                </li>
+                <li class="programs__item swiper-slide">
+                  <div class="programs__item-img-container">
+                    <picture>
+                      <source type="image/webp" media="(min-width: 1440px)"
+                        srcset="img/programs/women-desktop.webp 1x, img/programs/women-desktop@2x.webp 2x" width=""
+                        height="">
+                      <source type="image/webp" media="(min-width: 768px)"
+                        srcset="img/programs/women-tablet.webp 1x, img/programs/women-tablet@2x.webp 2x" width=""
+                        height="">
+                      <source type="image/webp"
+                        srcset="img/programs/women-mobile.webp 1x, img/programs/women-mobile@2x.webp 2x" width=""
+                        height="">
+                      <source type="image/jpeg" media="(min-width: 1440px)"
+                        srcset="img/programs/women-desktop.jpg 1x, img/programs/women-desktop@2x.jpg 2x" width=""
+                        height="">
+                      <source type="image/jpeg" media="(min-width: 768px)"
+                        srcset="img/programs/women-tablet.jpg 1x, img/programs/women-tablet@2x.jpg 2x" width=""
+                        height="">
+                      <img src="img/programs/women-mobile.jpg" srcset="img/programs/women-mobile@2x.jpg 2x" width=""
+                        height="" alt="" />
+                    </picture>
+                  </div>
+                  <div class="programs__item-text-container">
+                    <div class="programs__item-title-container">
+                      <h3>Религия</h3>
+                    </div>
+                    <div class="programs__item-description-container">
+                      <p>Религия Религия Религия Религия Религия Религия
+                      </p>
+                      <a class="programs__link programs__link--little btn" href="#">
+                        <div class="programs__link-svg-wrapper btn__wrapper">
+                          <svg width="10" height="10">
+                            <use href="__spritemap#sprite-arrow-up"></use>
+                          </svg>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+              <div class="container programs__buttons-slider-container">
+
+                <div class="swiper-pagination programs__slider-pagination" data-slider="programs-slider-pgn"></div>
+
+                <div class="programs__buttons-container">
+                  <div class="swiper-button-prev" data-slider="programs-slider-btn-prev">
+                    <div class="programs__link-btn-svg-wrapper">
+                      <svg width="10" height="10">
+                        <use href="__spritemap#sprite-arrow-left"></use>
+                      </svg>
+                    </div>
+                  </div>
+
+                  <div class="swiper-button-next" data-slider="programs-slider-btn-next">
+                    <div class="programs__link-btn-svg-wrapper">
+                      <svg width="10" height="10">
+                        <use href="__spritemap#sprite-arrow-right"></use>
+                      </svg>
+                    </div>
                   </div>
                 </div>
-              </li>
-              <li class="programs__item">
-                <div class="programs__item-img-container"></div>
-                <div class="programs__item-text-container">
-                  <div class="programs__item-title-container">
-                    <h3></h3>
-                  </div>
-                  <div class="programs__item-description-container">
-                    <p></p>
-                    <a class="programs__link programs__link--little btn" href="#">
-                      <div class="programs__link-svg-wrapper btn__wrapper">
-                        <svg width="10" height="10">
-                          <use href="__spritemap#sprite-arrow-up"></use>
-                        </svg>
-                      </div>
-                    </a>
-                  </div>
-                </div>
-              </li>
-              <li class="programs__item">
-                <div class="programs__item-img-container"></div>
-                <div class="programs__item-text-container">
-                  <div class="programs__item-title-container">
-                    <h3></h3>
-                  </div>
-                  <div class="programs__item-description-container">
-                    <p></p>
-                    <a class="programs__link programs__link--little btn" href="#">
-                      <div class="programs__link-svg-wrapper btn__wrapper">
-                        <svg width="10" height="10">
-                          <use href="__spritemap#sprite-arrow-up"></use>
-                        </svg>
-                      </div>
-                    </a>
-                  </div>
-                </div>
-              </li>
-            </ul>
-            <div class="container programs__bottom-container">
-              <div class="swiper-pagination">pagination</div>
-              <div class="swiper-button-prev">button back</div>
-              <div class="swiper-button-next">button prev</div>
+              </div>
             </div>
           </div>
         </section>
