Дорабатывает блок programs

--- a/source/index.html
+++ b/source/index.html
@@ -312,7 +312,7 @@
         <section class="programs" data-test="programs">
           <div class="container programs__title-container">
             <h2>Программы</h2>
-            <a class="programs__link btn" href="#">Все программы
+            <a class="programs__link programs__link--large btn" href="#">Все программы
               <div class="programs__link-svg-wrapper btn__wrapper">
                 <svg width="10" height="10">
                   <use href="__spritemap#sprite-arrow-up"></use>
@@ -365,21 +365,17 @@
                   <div class="programs__item-img-container">
                     <picture>
                       <source type="image/webp" media="(min-width: 1440px)"
-                        srcset="img/programs/women-desktop.webp 1x, img/programs/women-desktop@2x.webp 2x" width=""
+                        srcset="img/programs/boy-desktop.webp 1x, img/programs/boy-desktop@2x.webp 2x" width=""
                         height="">
                       <source type="image/webp" media="(min-width: 768px)"
-                        srcset="img/programs/women-tablet.webp 1x, img/programs/women-tablet@2x.webp 2x" width=""
-                        height="">
+                        srcset="img/programs/boy-tablet.webp 1x, img/programs/boy-tablet@2x.webp 2x" width="" height="">
                       <source type="image/webp"
-                        srcset="img/programs/women-mobile.webp 1x, img/programs/women-mobile@2x.webp 2x" width=""
-                        height="">
+                        srcset="img/programs/boy-mobile.webp 1x, img/programs/boy-mobile@2x.webp 2x" width="" height="">
                       <source type="image/jpeg" media="(min-width: 1440px)"
-                        srcset="img/programs/women-desktop.jpg 1x, img/programs/women-desktop@2x.jpg 2x" width=""
-                        height="">
+                        srcset="img/programs/boy-desktop.jpg 1x, img/programs/boy-desktop@2x.jpg 2x" width="" height="">
                       <source type="image/jpeg" media="(min-width: 768px)"
-                        srcset="img/programs/women-tablet.jpg 1x, img/programs/women-tablet@2x.jpg 2x" width=""
-                        height="">
-                      <img src="img/programs/women-mobile.jpg" srcset="img/programs/women-mobile@2x.jpg 2x" width=""
+                        srcset="img/programs/boy-tablet.jpg 1x, img/programs/boy-tablet@2x.jpg 2x" width="" height="">
+                      <img src="img/programs/boy-mobile.jpg" srcset="img/programs/boy-mobile@2x.jpg 2x" width=""
                         height="" alt="" />
                     </picture>
                   </div>
@@ -403,22 +399,22 @@
                   <div class="programs__item-img-container">
                     <picture>
                       <source type="image/webp" media="(min-width: 1440px)"
-                        srcset="img/programs/women-desktop.webp 1x, img/programs/women-desktop@2x.webp 2x" width=""
-                        height="">
+                        srcset="img/programs/studying-desktop.webp 1x, img/programs/studying-desktop@2x.webp 2x"
+                        width="" height="">
                       <source type="image/webp" media="(min-width: 768px)"
-                        srcset="img/programs/women-tablet.webp 1x, img/programs/women-tablet@2x.webp 2x" width=""
+                        srcset="img/programs/studying-tablet.webp 1x, img/programs/studying-tablet@2x.webp 2x" width=""
                         height="">
                       <source type="image/webp"
-                        srcset="img/programs/women-mobile.webp 1x, img/programs/women-mobile@2x.webp 2x" width=""
+                        srcset="img/programs/studying-mobile.webp 1x, img/programs/studying-mobile@2x.webp 2x" width=""
                         height="">
                       <source type="image/jpeg" media="(min-width: 1440px)"
-                        srcset="img/programs/women-desktop.jpg 1x, img/programs/women-desktop@2x.jpg 2x" width=""
+                        srcset="img/programs/studying-desktop.jpg 1x, img/programs/studying-desktop@2x.jpg 2x" width=""
                         height="">
                       <source type="image/jpeg" media="(min-width: 768px)"
-                        srcset="img/programs/women-tablet.jpg 1x, img/programs/women-tablet@2x.jpg 2x" width=""
+                        srcset="img/programs/studying-tablet.jpg 1x, img/programs/studying-tablet@2x.jpg 2x" width=""
                         height="">
-                      <img src="img/programs/women-mobile.jpg" srcset="img/programs/women-mobile@2x.jpg 2x" width=""
-                        height="" alt="" />
+                      <img src="img/programs/studying-mobile.jpg" srcset="img/programs/studying-mobile@2x.jpg 2x"
+                        width="" height="" alt="" />
                     </picture>
                   </div>
                   <div class="programs__item-text-container">
@@ -477,7 +473,7 @@
                   </div>
                 </li>
               </ul>
-              <div class="container programs__buttons-slider-container">
+              <!-- <div class="container programs__buttons-slider-container">
 
                 <div class="swiper-pagination programs__slider-pagination" data-slider="programs-slider-pgn"></div>
 
@@ -496,6 +492,30 @@
                         <use href="__spritemap#sprite-arrow-right"></use>
                       </svg>
                     </div>
+                  </div>
+                </div>
+              </div> -->
+
+
+            </div>
+            <div class="container programs__buttons-slider-container">
+
+              <div class="swiper-pagination programs__slider-pagination" data-slider="programs-slider-pgn"></div>
+
+              <div class="programs__buttons-container">
+                <div class="swiper-button-prev" data-slider="programs-slider-btn-prev">
+                  <div class="programs__link-btn-svg-wrapper">
+                    <svg width="10" height="10">
+                      <use href="__spritemap#sprite-arrow-left"></use>
+                    </svg>
+                  </div>
+                </div>
+
+                <div class="swiper-button-next" data-slider="programs-slider-btn-next">
+                  <div class="programs__link-btn-svg-wrapper">
+                    <svg width="10" height="10">
+                      <use href="__spritemap#sprite-arrow-right"></use>
+                    </svg>
                   </div>
                 </div>
               </div>
