Заканчивает блок programs

--- a/source/index.html
+++ b/source/index.html
@@ -503,21 +503,23 @@
               <div class="swiper-pagination programs__slider-pagination" data-slider="programs-slider-pgn"></div>
 
               <div class="programs__buttons-container">
-                <div class="swiper-button-prev" data-slider="programs-slider-btn-prev">
+                <button class="programs__slider-button swiper-button-prev" disabled type="button"
+                  data-slider="programs-slider-btn-prev">
                   <div class="programs__link-btn-svg-wrapper">
                     <svg width="10" height="10">
                       <use href="__spritemap#sprite-arrow-left"></use>
                     </svg>
                   </div>
-                </div>
+                </button>
 
-                <div class="swiper-button-next" data-slider="programs-slider-btn-next">
+                <button class="programs__slider-button swiper-button-next" type="button"
+                  data-slider="programs-slider-btn-next">
                   <div class="programs__link-btn-svg-wrapper">
                     <svg width="10" height="10">
                       <use href="__spritemap#sprite-arrow-right"></use>
                     </svg>
                   </div>
-                </div>
+                </button>
               </div>
             </div>
           </div>
