Добавляет блок contacts

--- a/source/index.html
+++ b/source/index.html
@@ -507,8 +507,7 @@
               и городах, в которых можете пройти программу.</p>
             <picture>
               <source type="image/webp" media="(min-width: 1440px)"
-                srcset="img/grant/arrows-desktop.webp.webp 1x, img/grant/arrows-desktop@2x.webp 2x" width="498"
-                height="363">
+                srcset="img/grant/arrows-desktop.webp 1x, img/grant/arrows-desktop@2x.webp 2x" width="498" height="363">
               <source type="image/webp" media="(min-width: 768px)"
                 srcset="img/grant/arrows-tablet.webp 1x, img/grant/arrows-tablet@2x.webp 2x" width="678" height="375">
               <source type="image/webp" srcset="img/grant/arrows-mobile.webp 1x, img/grant/arrows-mobile@2x.webp 2x"
@@ -543,6 +542,53 @@
                 <span>4</span>
               </li>
             </ul>
+          </div>
+        </div>
+      </section>
+
+
+
+      <section class="contacts" data-test="contacts">
+        <div class="container contacts__container">
+          <div class="contacts__text-container">
+            <h2>Контакты</h2>
+            <ul class="contact__list">
+              <li class="contacts__item">
+                <h3>Центральный офис</h3>
+                <p>г. Новосибирск, ул. Щетинкина 68, культурный центр</p>
+              </li>
+
+              <li class="contacts__item">
+                <h3>Телефон</h3>
+                <p>
+                  <a href="tel:+796387687676">+7 963 876 876 76</a>
+                </p>
+              </li>
+
+              <li class="contacts__item">
+                <h3>Email</h3>
+                <p>
+                  <a href="mailto:Info@stazh.ru">Info@stazh.ru</a>
+                </p>
+              </li>
+            </ul>
+          </div>
+
+          <div class="contacts__img-container">
+            <picture>
+              <source type="image/webp" media="(min-width: 1440px)"
+                srcset="img/contacts/map-desktop.webp 1x, img/contacts/map-desktop@2x.webp 2x" width="" height="">
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="img/contacts/map-tablet.webp 1x, img/contacts/map-tablet@2x.webp 2x" width="" height="">
+              <source type="image/webp" srcset="img/contacts/map-mobile.webp 1x, img/contacts/map-mobile@2x.webp 2x"
+                width="" height="">
+              <source type="image/jpeg" media="(min-width: 1440px)"
+                srcset="img/contacts/map-desktop.jpg 1x, img/contacts/map-desktop@2x.jpg 2x" width="" height="">
+              <source type="image/jpeg" media="(min-width: 768px)"
+                srcset="img/contacts/map-tablet.jpg 1x, img/contacts/map-tablet@2x.jpg 2x" width="" height="">
+              <img src="img/contacts/map-mobile.jpg" srcset="img/contacts/map-mobile@2x.jpg 2x" width="" height=""
+                alt="Карта с адресом организации: г. Новосибирск, ул. Щетинкина 68, культурный центр" />
+            </picture>
           </div>
         </div>
       </section>
